// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoveResourceModal test renders as expected 2 1`] = `undefined`;

exports[`RemoveResourceModal test renders as expected 2 2`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(RemoveResourceModal)
      data={
        Object {
          "__typename": "Application",
          "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
          "clusterCount": 0,
          "created": "2019-12-11T01:24:02Z",
          "dashboard": null,
          "hubSubscriptions": Array [],
          "kind": "HCMApplication",
          "name": "samplebook-gbap",
          "namespace": "sample",
          "podStatusCount": Object {},
          "remoteSubscriptionStatusCount": Object {},
          "selected": Array [
            Object {
              "id": "1",
            },
            Object {
              "id": 2,
            },
          ],
          "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
        }
      }
      handleClose={[MockFunction]}
      handleSubmit={[MockFunction]}
      label={
        Object {
          "heading": "modal.remove-hcmapplication.heading",
          "label": "modal.remove-hcmapplication.label",
          "primaryBtn": "modal.remove-hcmapplication.heading",
        }
      }
      locale="en"
      open={true}
      resourceType={
        Object {
          "list": "HCMApplicationList",
          "name": "HCMApplication",
        }
      }
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        }
      }
    >
      <RemoveResourceModal
        data={
          Object {
            "__typename": "Application",
            "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
            "clusterCount": 0,
            "created": "2019-12-11T01:24:02Z",
            "dashboard": null,
            "hubSubscriptions": Array [],
            "kind": "HCMApplication",
            "name": "samplebook-gbap",
            "namespace": "sample",
            "podStatusCount": Object {},
            "remoteSubscriptionStatusCount": Object {},
            "selected": Array [
              Object {
                "id": "1",
              },
              Object {
                "id": 2,
              },
            ],
            "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
          }
        }
        deleteSuccessFinished={[Function]}
        forceRefresh={[Function]}
        handleClose={[MockFunction]}
        handleSubmit={[MockFunction]}
        label={
          Object {
            "heading": "modal.remove-hcmapplication.heading",
            "label": "modal.remove-hcmapplication.label",
            "primaryBtn": "modal.remove-hcmapplication.heading",
          }
        }
        locale="en"
        mutateSuccessFinished={[Function]}
        open={true}
        resourceType={
          Object {
            "list": "HCMApplicationList",
            "name": "HCMApplication",
          }
        }
        store={
          Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(observable): [Function],
          }
        }
        storeSubscription={
          Subscription {
            "listeners": Object {
              "clear": [Function],
              "get": [Function],
              "notify": [Function],
              "subscribe": [Function],
            },
            "onStateChange": [Function],
            "parentSub": undefined,
            "store": Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            },
            "unsubscribe": [Function],
          }
        }
        submitDeleteSuccess={[Function]}
      >
        <div>
          <AcmModal
            actions={
              Array [
                <Button
                  isDisabled={true}
                  onClick={[Function]}
                  variant="danger"
                >
                  Delete application
                </Button>,
                <Button
                  onClick={[Function]}
                  variant="secondary"
                >
                  Cancel
                </Button>,
              ]
            }
            aria-label="Delete application"
            id="remove-resource-modal"
            isOpen={true}
            onClose={[Function]}
            showClose={true}
            title="Delete application"
            variant="medium"
          >
            <Modal
              actions={
                Array [
                  <Button
                    variant="primary"
                  >
                    Submit
                  </Button>,
                  <Button
                    variant="link"
                  >
                    Cancel
                  </Button>,
                ]
              }
              appendTo={[Function]}
              aria-describedby=""
              aria-label=""
              aria-labelledby=""
              className=""
              hasNoBodyWrapper={false}
              isOpen={false}
              onClose={[Function]}
              ouiaSafe={true}
              showClose={true}
              title="Delete application"
              titleIconVariant={null}
              titleLabel=""
              variant="medium"
            >
              <Portal
                containerInfo={<div />}
              >
                <ModalContent
                  actions={
                    Array [
                      <Button
                        variant="primary"
                      >
                        Submit
                      </Button>,
                      <Button
                        variant="link"
                      >
                        Cancel
                      </Button>,
                    ]
                  }
                  aria-describedby=""
                  aria-label=""
                  aria-labelledby=""
                  boxId="pf-modal-part-1"
                  className=""
                  descriptorId="pf-modal-part-3"
                  hasNoBodyWrapper={false}
                  isOpen={false}
                  labelId="pf-modal-part-2"
                  onClose={[Function]}
                  ouiaId="OUIA-Generated-Modal-medium-2"
                  ouiaSafe={true}
                  showClose={true}
                  title="Delete application"
                  titleIconVariant={null}
                  titleLabel=""
                  variant="medium"
                />
              </Portal>
            </Modal>
          </AcmModal>
        </div>
      </RemoveResourceModal>
    </Connect(RemoveResourceModal)>
  </Router>
</BrowserRouter>
`;

exports[`RemoveResourceModal test renders as expected 2 3`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(RemoveResourceModal)
      data={
        Object {
          "__typename": "Application",
          "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
          "clusterCount": 0,
          "created": "2019-12-11T01:24:02Z",
          "dashboard": null,
          "hubSubscriptions": Array [],
          "kind": "HCMApplication",
          "name": "samplebook-gbap",
          "namespace": "sample",
          "podStatusCount": Object {},
          "remoteSubscriptionStatusCount": Object {},
          "selected": Array [
            Object {
              "id": "1",
            },
            Object {
              "id": 2,
            },
          ],
          "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
        }
      }
      handleClose={[MockFunction]}
      handleSubmit={[MockFunction]}
      label={
        Object {
          "heading": "modal.remove-hcmapplication.heading",
          "label": "modal.remove-hcmapplication.label",
          "primaryBtn": "modal.remove-hcmapplication.heading",
        }
      }
      locale="en"
      open={true}
      resourceType={
        Object {
          "list": "HCMApplicationList",
          "name": "HCMApplication",
        }
      }
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        }
      }
    >
      <RemoveResourceModal
        data={
          Object {
            "__typename": "Application",
            "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
            "clusterCount": 0,
            "created": "2019-12-11T01:24:02Z",
            "dashboard": null,
            "hubSubscriptions": Array [],
            "kind": "HCMApplication",
            "name": "samplebook-gbap",
            "namespace": "sample",
            "podStatusCount": Object {},
            "remoteSubscriptionStatusCount": Object {},
            "selected": Array [
              Object {
                "id": "1",
              },
              Object {
                "id": 2,
              },
            ],
            "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
          }
        }
        deleteSuccessFinished={[Function]}
        forceRefresh={[Function]}
        handleClose={[MockFunction]}
        handleSubmit={[MockFunction]}
        label={
          Object {
            "heading": "modal.remove-hcmapplication.heading",
            "label": "modal.remove-hcmapplication.label",
            "primaryBtn": "modal.remove-hcmapplication.heading",
          }
        }
        locale="en"
        mutateSuccessFinished={[Function]}
        open={true}
        resourceType={
          Object {
            "list": "HCMApplicationList",
            "name": "HCMApplication",
          }
        }
        store={
          Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(observable): [Function],
          }
        }
        storeSubscription={
          Subscription {
            "listeners": Object {
              "clear": [Function],
              "get": [Function],
              "notify": [Function],
              "subscribe": [Function],
            },
            "onStateChange": [Function],
            "parentSub": undefined,
            "store": Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            },
            "unsubscribe": [Function],
          }
        }
        submitDeleteSuccess={[Function]}
      >
        <div>
          <AcmModal
            actions={
              Array [
                <Button
                  isDisabled={true}
                  onClick={[Function]}
                  variant="danger"
                >
                  Delete application
                </Button>,
                <Button
                  onClick={[Function]}
                  variant="secondary"
                >
                  Cancel
                </Button>,
              ]
            }
            aria-label="Delete application"
            id="remove-resource-modal"
            isOpen={true}
            onClose={[Function]}
            showClose={true}
            title="Delete application"
            variant="medium"
          >
            <Modal
              actions={
                Array [
                  <Button
                    variant="primary"
                  >
                    Submit
                  </Button>,
                  <Button
                    variant="link"
                  >
                    Cancel
                  </Button>,
                ]
              }
              appendTo={[Function]}
              aria-describedby=""
              aria-label=""
              aria-labelledby=""
              className=""
              hasNoBodyWrapper={false}
              isOpen={false}
              onClose={[Function]}
              ouiaSafe={true}
              showClose={true}
              title="Delete application"
              titleIconVariant={null}
              titleLabel=""
              variant="medium"
            >
              <Portal
                containerInfo={<div />}
              >
                <ModalContent
                  actions={
                    Array [
                      <Button
                        variant="primary"
                      >
                        Submit
                      </Button>,
                      <Button
                        variant="link"
                      >
                        Cancel
                      </Button>,
                    ]
                  }
                  aria-describedby=""
                  aria-label=""
                  aria-labelledby=""
                  boxId="pf-modal-part-1"
                  className=""
                  descriptorId="pf-modal-part-3"
                  hasNoBodyWrapper={false}
                  isOpen={false}
                  labelId="pf-modal-part-2"
                  onClose={[Function]}
                  ouiaId="OUIA-Generated-Modal-medium-2"
                  ouiaSafe={true}
                  showClose={true}
                  title="Delete application"
                  titleIconVariant={null}
                  titleLabel=""
                  variant="medium"
                />
              </Portal>
            </Modal>
          </AcmModal>
        </div>
      </RemoveResourceModal>
    </Connect(RemoveResourceModal)>
  </Router>
</BrowserRouter>
`;

exports[`RemoveResourceModal test renders as expected dummy 1`] = `undefined`;

exports[`RemoveResourceModal test renders as expected dummy 2`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(RemoveResourceModal)
      data={
        Object {
          "__typename": "Application",
          "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
          "clusterCount": 0,
          "created": "2019-12-11T01:24:02Z",
          "dashboard": null,
          "hubSubscriptions": Array [],
          "kind": "HCMApplication",
          "metadata": Object {
            "name": "samplebook-gbap",
            "namespace": "sample",
            "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
          },
          "name": "samplebook-gbap",
          "namespace": "sample",
          "podStatusCount": Object {},
          "remoteSubscriptionStatusCount": Object {},
          "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
        }
      }
      handleClose={[MockFunction]}
      handleSubmit={[MockFunction]}
      label={
        Object {
          "heading": "modal.remove-hcmpolicy.heading",
          "label": "modal.remove-hcmpolicy.label",
          "primaryBtn": "modal.remove-hcmpolicy.heading",
        }
      }
      locale="en"
      open={true}
      resourceType={
        Object {
          "list": "HCMApplicationList",
          "name": "HCMApplication",
        }
      }
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        }
      }
    >
      <RemoveResourceModal
        data={
          Object {
            "__typename": "Application",
            "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
            "clusterCount": 0,
            "created": "2019-12-11T01:24:02Z",
            "dashboard": null,
            "hubSubscriptions": Array [],
            "kind": "HCMApplication",
            "metadata": Object {
              "name": "samplebook-gbap",
              "namespace": "sample",
              "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
            },
            "name": "samplebook-gbap",
            "namespace": "sample",
            "podStatusCount": Object {},
            "remoteSubscriptionStatusCount": Object {},
            "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
          }
        }
        deleteSuccessFinished={[Function]}
        forceRefresh={[Function]}
        handleClose={[MockFunction]}
        handleSubmit={[MockFunction]}
        label={
          Object {
            "heading": "modal.remove-hcmpolicy.heading",
            "label": "modal.remove-hcmpolicy.label",
            "primaryBtn": "modal.remove-hcmpolicy.heading",
          }
        }
        locale="en"
        mutateSuccessFinished={[Function]}
        open={true}
        resourceType={
          Object {
            "list": "HCMApplicationList",
            "name": "HCMApplication",
          }
        }
        store={
          Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(observable): [Function],
          }
        }
        storeSubscription={
          Subscription {
            "listeners": Object {
              "clear": [Function],
              "get": [Function],
              "notify": [Function],
              "subscribe": [Function],
            },
            "onStateChange": [Function],
            "parentSub": undefined,
            "store": Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            },
            "unsubscribe": [Function],
          }
        }
        submitDeleteSuccess={[Function]}
      >
        <div>
          <AcmModal
            actions={
              Array [
                <Button
                  isDisabled={true}
                  onClick={[Function]}
                  variant="danger"
                />,
                <Button
                  onClick={[Function]}
                  variant="secondary"
                >
                  Cancel
                </Button>,
              ]
            }
            id="remove-resource-modal"
            isOpen={true}
            onClose={[Function]}
            showClose={true}
            variant="medium"
          >
            <Modal
              actions={
                Array [
                  <Button
                    variant="primary"
                  >
                    Submit
                  </Button>,
                  <Button
                    variant="link"
                  >
                    Cancel
                  </Button>,
                ]
              }
              appendTo={[Function]}
              aria-describedby=""
              aria-label=""
              aria-labelledby=""
              className=""
              hasNoBodyWrapper={false}
              isOpen={false}
              onClose={[Function]}
              ouiaSafe={true}
              showClose={true}
              title=""
              titleIconVariant={null}
              titleLabel=""
              variant="medium"
            >
              <Portal
                containerInfo={<div />}
              >
                <ModalContent
                  actions={
                    Array [
                      <Button
                        variant="primary"
                      >
                        Submit
                      </Button>,
                      <Button
                        variant="link"
                      >
                        Cancel
                      </Button>,
                    ]
                  }
                  aria-describedby=""
                  aria-label=""
                  aria-labelledby=""
                  boxId="pf-modal-part-2"
                  className=""
                  descriptorId="pf-modal-part-4"
                  hasNoBodyWrapper={false}
                  isOpen={false}
                  labelId="pf-modal-part-3"
                  onClose={[Function]}
                  ouiaId="OUIA-Generated-Modal-medium-3"
                  ouiaSafe={true}
                  showClose={true}
                  title=""
                  titleIconVariant={null}
                  titleLabel=""
                  variant="medium"
                />
              </Portal>
            </Modal>
          </AcmModal>
        </div>
      </RemoveResourceModal>
    </Connect(RemoveResourceModal)>
  </Router>
</BrowserRouter>
`;

exports[`RemoveResourceModal test renders as expected dummy 3`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(RemoveResourceModal)
      data={
        Object {
          "__typename": "Application",
          "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
          "clusterCount": 0,
          "created": "2019-12-11T01:24:02Z",
          "dashboard": null,
          "hubSubscriptions": Array [],
          "kind": "HCMApplication",
          "metadata": Object {
            "name": "samplebook-gbap",
            "namespace": "sample",
            "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
          },
          "name": "samplebook-gbap",
          "namespace": "sample",
          "podStatusCount": Object {},
          "remoteSubscriptionStatusCount": Object {},
          "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
        }
      }
      handleClose={[MockFunction]}
      handleSubmit={[MockFunction]}
      label={
        Object {
          "heading": "modal.remove-hcmpolicy.heading",
          "label": "modal.remove-hcmpolicy.label",
          "primaryBtn": "modal.remove-hcmpolicy.heading",
        }
      }
      locale="en"
      open={true}
      resourceType={
        Object {
          "list": "HCMApplicationList",
          "name": "HCMApplication",
        }
      }
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        }
      }
    >
      <RemoveResourceModal
        data={
          Object {
            "__typename": "Application",
            "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
            "clusterCount": 0,
            "created": "2019-12-11T01:24:02Z",
            "dashboard": null,
            "hubSubscriptions": Array [],
            "kind": "HCMApplication",
            "metadata": Object {
              "name": "samplebook-gbap",
              "namespace": "sample",
              "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
            },
            "name": "samplebook-gbap",
            "namespace": "sample",
            "podStatusCount": Object {},
            "remoteSubscriptionStatusCount": Object {},
            "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
          }
        }
        deleteSuccessFinished={[Function]}
        forceRefresh={[Function]}
        handleClose={[MockFunction]}
        handleSubmit={[MockFunction]}
        label={
          Object {
            "heading": "modal.remove-hcmpolicy.heading",
            "label": "modal.remove-hcmpolicy.label",
            "primaryBtn": "modal.remove-hcmpolicy.heading",
          }
        }
        locale="en"
        mutateSuccessFinished={[Function]}
        open={true}
        resourceType={
          Object {
            "list": "HCMApplicationList",
            "name": "HCMApplication",
          }
        }
        store={
          Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(observable): [Function],
          }
        }
        storeSubscription={
          Subscription {
            "listeners": Object {
              "clear": [Function],
              "get": [Function],
              "notify": [Function],
              "subscribe": [Function],
            },
            "onStateChange": [Function],
            "parentSub": undefined,
            "store": Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            },
            "unsubscribe": [Function],
          }
        }
        submitDeleteSuccess={[Function]}
      >
        <div>
          <AcmModal
            actions={
              Array [
                <Button
                  isDisabled={true}
                  onClick={[Function]}
                  variant="danger"
                />,
                <Button
                  onClick={[Function]}
                  variant="secondary"
                >
                  Cancel
                </Button>,
              ]
            }
            id="remove-resource-modal"
            isOpen={true}
            onClose={[Function]}
            showClose={true}
            variant="medium"
          >
            <Modal
              actions={
                Array [
                  <Button
                    variant="primary"
                  >
                    Submit
                  </Button>,
                  <Button
                    variant="link"
                  >
                    Cancel
                  </Button>,
                ]
              }
              appendTo={[Function]}
              aria-describedby=""
              aria-label=""
              aria-labelledby=""
              className=""
              hasNoBodyWrapper={false}
              isOpen={false}
              onClose={[Function]}
              ouiaSafe={true}
              showClose={true}
              title=""
              titleIconVariant={null}
              titleLabel=""
              variant="medium"
            >
              <Portal
                containerInfo={<div />}
              >
                <ModalContent
                  actions={
                    Array [
                      <Button
                        variant="primary"
                      >
                        Submit
                      </Button>,
                      <Button
                        variant="link"
                      >
                        Cancel
                      </Button>,
                    ]
                  }
                  aria-describedby=""
                  aria-label=""
                  aria-labelledby=""
                  boxId="pf-modal-part-2"
                  className=""
                  descriptorId="pf-modal-part-4"
                  hasNoBodyWrapper={false}
                  isOpen={false}
                  labelId="pf-modal-part-3"
                  onClose={[Function]}
                  ouiaId="OUIA-Generated-Modal-medium-3"
                  ouiaSafe={true}
                  showClose={true}
                  title=""
                  titleIconVariant={null}
                  titleLabel=""
                  variant="medium"
                />
              </Portal>
            </Modal>
          </AcmModal>
        </div>
      </RemoveResourceModal>
    </Connect(RemoveResourceModal)>
  </Router>
</BrowserRouter>
`;

exports[`RemoveResourceModal test renders as expected with mocked apollo client data 1`] = `undefined`;

exports[`RemoveResourceModal test renders as expected with mocked apollo client data 2`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(RemoveResourceModal)
      data={
        Object {
          "__typename": "Application",
          "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
          "clusterCount": 0,
          "created": "2019-12-11T01:24:02Z",
          "dashboard": null,
          "hubSubscriptions": Array [],
          "kind": "HCMApplication",
          "metadata": Object {
            "name": "samplebook-gbap",
            "namespace": "sample",
            "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
          },
          "name": "samplebook-gbap",
          "namespace": "sample",
          "podStatusCount": Object {},
          "remoteSubscriptionStatusCount": Object {},
          "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
        }
      }
      handleClose={[MockFunction]}
      handleSubmit={[MockFunction]}
      label={
        Object {
          "heading": "modal.remove-hcmapplication.heading",
          "label": "modal.remove-hcmapplication.label",
          "primaryBtn": "modal.remove-hcmapplication.heading",
        }
      }
      locale="en"
      open={true}
      resourceType={
        Object {
          "list": "HCMApplicationList",
          "name": "HCMApplication",
        }
      }
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        }
      }
    >
      <RemoveResourceModal
        data={
          Object {
            "__typename": "Application",
            "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
            "clusterCount": 0,
            "created": "2019-12-11T01:24:02Z",
            "dashboard": null,
            "hubSubscriptions": Array [],
            "kind": "HCMApplication",
            "metadata": Object {
              "name": "samplebook-gbap",
              "namespace": "sample",
              "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
            },
            "name": "samplebook-gbap",
            "namespace": "sample",
            "podStatusCount": Object {},
            "remoteSubscriptionStatusCount": Object {},
            "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
          }
        }
        deleteSuccessFinished={[Function]}
        forceRefresh={[Function]}
        handleClose={[MockFunction]}
        handleSubmit={[MockFunction]}
        label={
          Object {
            "heading": "modal.remove-hcmapplication.heading",
            "label": "modal.remove-hcmapplication.label",
            "primaryBtn": "modal.remove-hcmapplication.heading",
          }
        }
        locale="en"
        mutateSuccessFinished={[Function]}
        open={true}
        resourceType={
          Object {
            "list": "HCMApplicationList",
            "name": "HCMApplication",
          }
        }
        store={
          Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(observable): [Function],
          }
        }
        storeSubscription={
          Subscription {
            "listeners": Object {
              "clear": [Function],
              "get": [Function],
              "notify": [Function],
              "subscribe": [Function],
            },
            "onStateChange": [Function],
            "parentSub": undefined,
            "store": Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            },
            "unsubscribe": [Function],
          }
        }
        submitDeleteSuccess={[Function]}
      >
        <div>
          <AcmModal
            actions={
              Array [
                <Button
                  isDisabled={true}
                  onClick={[Function]}
                  variant="danger"
                >
                  Delete application
                </Button>,
                <Button
                  onClick={[Function]}
                  variant="secondary"
                >
                  Cancel
                </Button>,
              ]
            }
            aria-label="Delete application"
            id="remove-resource-modal"
            isOpen={true}
            onClose={[Function]}
            showClose={true}
            title="Delete application"
            variant="medium"
          >
            <Modal
              actions={
                Array [
                  <Button
                    variant="primary"
                  >
                    Submit
                  </Button>,
                  <Button
                    variant="link"
                  >
                    Cancel
                  </Button>,
                ]
              }
              appendTo={[Function]}
              aria-describedby=""
              aria-label=""
              aria-labelledby=""
              className=""
              hasNoBodyWrapper={false}
              isOpen={false}
              onClose={[Function]}
              ouiaSafe={true}
              showClose={true}
              title="Delete application"
              titleIconVariant={null}
              titleLabel=""
              variant="medium"
            >
              <Portal
                containerInfo={<div />}
              >
                <ModalContent
                  actions={
                    Array [
                      <Button
                        variant="primary"
                      >
                        Submit
                      </Button>,
                      <Button
                        variant="link"
                      >
                        Cancel
                      </Button>,
                    ]
                  }
                  aria-describedby=""
                  aria-label=""
                  aria-labelledby=""
                  boxId="pf-modal-part-0"
                  className=""
                  descriptorId="pf-modal-part-2"
                  hasNoBodyWrapper={false}
                  isOpen={false}
                  labelId="pf-modal-part-1"
                  onClose={[Function]}
                  ouiaId="OUIA-Generated-Modal-medium-1"
                  ouiaSafe={true}
                  showClose={true}
                  title="Delete application"
                  titleIconVariant={null}
                  titleLabel=""
                  variant="medium"
                />
              </Portal>
            </Modal>
          </AcmModal>
        </div>
      </RemoveResourceModal>
    </Connect(RemoveResourceModal)>
  </Router>
</BrowserRouter>
`;

exports[`RemoveResourceModal test renders as expected with mocked apollo client data 3`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(RemoveResourceModal)
      data={
        Object {
          "__typename": "Application",
          "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
          "clusterCount": 0,
          "created": "2019-12-11T01:24:02Z",
          "dashboard": null,
          "hubSubscriptions": Array [],
          "kind": "HCMApplication",
          "metadata": Object {
            "name": "samplebook-gbap",
            "namespace": "sample",
            "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
          },
          "name": "samplebook-gbap",
          "namespace": "sample",
          "podStatusCount": Object {},
          "remoteSubscriptionStatusCount": Object {},
          "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
        }
      }
      handleClose={[MockFunction]}
      handleSubmit={[MockFunction]}
      label={
        Object {
          "heading": "modal.remove-hcmapplication.heading",
          "label": "modal.remove-hcmapplication.label",
          "primaryBtn": "modal.remove-hcmapplication.heading",
        }
      }
      locale="en"
      open={true}
      resourceType={
        Object {
          "list": "HCMApplicationList",
          "name": "HCMApplication",
        }
      }
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        }
      }
    >
      <RemoveResourceModal
        data={
          Object {
            "__typename": "Application",
            "_uid": "local-cluster/42d4c013-52b9-11ea-bf05-00000a102d26",
            "clusterCount": 0,
            "created": "2019-12-11T01:24:02Z",
            "dashboard": null,
            "hubSubscriptions": Array [],
            "kind": "HCMApplication",
            "metadata": Object {
              "name": "samplebook-gbap",
              "namespace": "sample",
              "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
            },
            "name": "samplebook-gbap",
            "namespace": "sample",
            "podStatusCount": Object {},
            "remoteSubscriptionStatusCount": Object {},
            "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/samplebook-gbap",
          }
        }
        deleteSuccessFinished={[Function]}
        forceRefresh={[Function]}
        handleClose={[MockFunction]}
        handleSubmit={[MockFunction]}
        label={
          Object {
            "heading": "modal.remove-hcmapplication.heading",
            "label": "modal.remove-hcmapplication.label",
            "primaryBtn": "modal.remove-hcmapplication.heading",
          }
        }
        locale="en"
        mutateSuccessFinished={[Function]}
        open={true}
        resourceType={
          Object {
            "list": "HCMApplicationList",
            "name": "HCMApplication",
          }
        }
        store={
          Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(observable): [Function],
          }
        }
        storeSubscription={
          Subscription {
            "listeners": Object {
              "clear": [Function],
              "get": [Function],
              "notify": [Function],
              "subscribe": [Function],
            },
            "onStateChange": [Function],
            "parentSub": undefined,
            "store": Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            },
            "unsubscribe": [Function],
          }
        }
        submitDeleteSuccess={[Function]}
      >
        <div>
          <AcmModal
            actions={
              Array [
                <Button
                  isDisabled={true}
                  onClick={[Function]}
                  variant="danger"
                >
                  Delete application
                </Button>,
                <Button
                  onClick={[Function]}
                  variant="secondary"
                >
                  Cancel
                </Button>,
              ]
            }
            aria-label="Delete application"
            id="remove-resource-modal"
            isOpen={true}
            onClose={[Function]}
            showClose={true}
            title="Delete application"
            variant="medium"
          >
            <Modal
              actions={
                Array [
                  <Button
                    variant="primary"
                  >
                    Submit
                  </Button>,
                  <Button
                    variant="link"
                  >
                    Cancel
                  </Button>,
                ]
              }
              appendTo={[Function]}
              aria-describedby=""
              aria-label=""
              aria-labelledby=""
              className=""
              hasNoBodyWrapper={false}
              isOpen={false}
              onClose={[Function]}
              ouiaSafe={true}
              showClose={true}
              title="Delete application"
              titleIconVariant={null}
              titleLabel=""
              variant="medium"
            >
              <Portal
                containerInfo={<div />}
              >
                <ModalContent
                  actions={
                    Array [
                      <Button
                        variant="primary"
                      >
                        Submit
                      </Button>,
                      <Button
                        variant="link"
                      >
                        Cancel
                      </Button>,
                    ]
                  }
                  aria-describedby=""
                  aria-label=""
                  aria-labelledby=""
                  boxId="pf-modal-part-0"
                  className=""
                  descriptorId="pf-modal-part-2"
                  hasNoBodyWrapper={false}
                  isOpen={false}
                  labelId="pf-modal-part-1"
                  onClose={[Function]}
                  ouiaId="OUIA-Generated-Modal-medium-1"
                  ouiaSafe={true}
                  showClose={true}
                  title="Delete application"
                  titleIconVariant={null}
                  titleLabel=""
                  variant="medium"
                />
              </Portal>
            </Modal>
          </AcmModal>
        </div>
      </RemoveResourceModal>
    </Connect(RemoveResourceModal)>
  </Router>
</BrowserRouter>
`;
